# cc-clean

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README-EN.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
csrc/: cc_clean.c  cc_clean.h  cc_clean_cli.c  cc_clean_core.c  cc_clean_main.c  cc_clean_report.c
docs/: BUILDING.original.md
docs/releases/: TEMPLATE.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md
scripts/: cc_clean.py  test_cc_clean_container_e2e.sh  test_cc_clean_posix.sh  test_cc_clean_windows.ps1
